Update (#11)
* ✨(refactor): Remove unused network packet classes

Removes obsolete packet classes and related handlers, simplifying the network layer.

* ✨(refactor): Introduce new search architecture

Replaces suffix tree implementation with a more flexible search interface.
Introduces `UltraLowMemoryElementSearch` and `MemoryHogElementSearch` for
different memory/performance trade-offs. Refactors `IngredientFilter` to
utilize the new search architecture.

* ✨(refactor): Use fastutil for map and set implementations

Replaces standard Java HashMap and HashSet with more performant
fastutil implementations for various data structures. This includes
Object2IntOpenHashMap, Reference2ObjectOpenHashMap, ObjectOpenHashSet,
and Reference2ObjectOpenHashMap.

* ✨(refactor): Rename JEI to JFMUY and update config

Replaces JEI references with JFMUY throughout the codebase, including config file names,
internal classes, and language keys. Adds a new config option for the default fluid
container item and updates fluid handling to use this option. Also, refactors
cheat item logic for better compatibility when clicking ingredients.

* ✨(refactor): Remove unused background builder

Removes the IngredientFilterBackgroundBuilder class, which is no longer needed with the new search architecture.

* ✨(refactor): Expand subtype registry for fluids

Adds support for fluid subtypes, allowing mods to register custom interpreters for fluids.
Updates the subtype registry to handle both items and fluids, and renames `registerItemSubtypes`
to `registerSubtypes` for broader compatibility. Introduces `IIngredientSubtypeInterpreter`
as a common interface for both item and fluid subtype interpretation.

* ✨(refactor): Set subtype registry in JFMUYStarter

Initializes and sets the subtype registry within JFMUYStarter,
ensuring it is available for use by other components.

* ✨(feat): Add config for mouse click to see recipes

Introduces a new configuration option to control whether mouse clicks
open 