@@ -7,7 +7,11 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.client.audio.PositionedSoundRecord;
 import net.minecraft.client.audio.SoundHandler;
 import net.minecraft.client.gui.FontRenderer;
+import net.minecraft.util.EnumChatFormatting;
 import net.minecraft.util.ResourceLocation;
+
+import org.apache.commons.lang3.mutable.MutableObject;
+import org.jetbrains.annotations.Nullable;
 
 import ruiseki.jfmuy.Internal;
 import ruiseki.jfmuy.api.gui.IDrawable;
@@ -22,6 +26,9 @@ public class RecipeCategoryTab extends RecipeGuiTab {
 
     private final IRecipeGuiLogic logic;
     private final IRecipeCategory category;
+
+    @Nullable
+    private MutableObject<Object> cachedRecipeCatalyst = null;
 
     public RecipeCategoryTab(IRecipeGuiLogic logic, IRecipeCategory category, int x, int y) {
         super(x, y);
@@ -51,9 +58,16 @@ public class RecipeCategoryTab extends RecipeGuiTab {
             iconY += (16 - icon.getHeight()) / 2;
             icon.draw(minecraft, iconX, iconY);
         } else {
-            List<Object> recipeCatalysts = logic.getRecipeCatalysts(category);
-            if (!recipeCatalysts.isEmpty()) {
-                Object ingredient = recipeCatalysts.get(0);
+            if (this.cachedRecipeCatalyst == null) {
+                List<Object> cachedRecipeCatalysts = logic.getRecipeCatalysts(category);
+                if (cachedRecipeCatalysts.isEmpty()) {
+                    this.cachedRecipeCatalyst = new MutableObject<>(null);
+                } else {
+                    this.cachedRecipeCatalyst = new MutableObject<>(cachedRecipeCatalysts.getFirst());
+                }
+            }
+            Object ingredient = this.cachedRecipeCatalyst.getValue();
+            if (ingredient != null) {
                 renderIngredient(minecraft, iconX, iconY, ingredient);
             } else {
                 String text = category.getTitle()
@@ -94,6 +108,10 @@ public class RecipeCategoryTab extends RecipeGuiTab {
         // noinspection ConstantConditions
         if (title != null) {
             tooltip.add(title);
+        }
+
+        if (Minecraft.getMinecraft().gameSettings.advancedItemTooltips) {
+            tooltip.add(EnumChatFormatting.DARK_GRAY + category.getUid());
         }
 
         String modName = LegacyUtil.getModName(category);
